# ulexite

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  pages-deploy.yml  release.yml
crates/ulx-ast/: Cargo.toml
crates/ulx-ast/src/: lib.rs
crates/ulx-cli/: Cargo.toml
crates/ulx-cli/src/: debug.rs  diagnostics.rs  git_dep.rs  main.rs  manifest.rs  md.rs  output.rs  pipeline.rs  plan.rs  project_manifest.rs  providers.rs
crates/ulx-cli/tests/: bench.rs  debug.rs  eval.rs  run_file_prompt.rs  run_md.rs
crates/ulx-ir/: Cargo.toml
crates/ulx-ir/src/: lib.rs  lower.rs  optimize.rs  types.rs
crates/ulx-ir/tests/: lowering.rs
crates/ulx-lsp/: Cargo.toml
crates/ulx-lsp/src/: analysis.rs  backend.rs  capabilities.rs  index.rs  lib.rs  line_index.rs  main.rs
crates/ulx-lsp/tests/: lsp.rs
crates/ulx-runtime/: Cargo.toml
crates/ulx-runtime/src/: artifact_validate.rs  cache.rs  calibrate.rs  dataset.rs  env.rs  error.rs  interp.rs  lib.rs  provider.rs  snapshot.rs  stdlib.rs  trace.rs  validator.rs  value.rs
crates/ulx-runtime/src/provider/: anthropic.rs  artifact.rs  azure_openai.rs  browser.rs  cohere.rs  factory.rs  gemini.rs  judge.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs  openai_shape.rs  transport.rs
crates/ulx-runtime/tests/: e2e.rs
crates/ulx-sema/: Cargo.toml
crates/ulx-sema/src/: capability.rs  diagnostic.rs  lib.rs  resolve.rs  rewrite.rs  scope.rs  typecheck.rs
crates/ulx-sema/tests/: checks.rs  parse_cache.rs
crates/ulx-syntax/: Cargo.toml
crates/ulx-syntax/src/: fmt.rs  lexer.rs  lib.rs  parser.rs
crates/ulx-syntax/tests/: doc_comments.rs  file_expr.rs  fmt_roundtrip.rs  golden.rs  invalid.rs  name_spans.rs
crates/ulx-wasm/: Cargo.toml
crates/ulx-wasm/src/: lib.rs  line_index.rs  run.rs
docs/: simple-format.md
docs/spec/: 00-index.md  01-vision.md  02-prior-art-survey.md  03-gap-analysis.md  04-guiding-principles.md  05-language-overview.md  06-syntax-alternatives.md  07-recommended-syntax.md  08-grammar.md  09-type-system.md  10-execution-semantics.md  11-artifact-system.md  12-runtime-architecture.md  13-compiler-architecture.md  14-package-system.md  15-standard-library.md  16-testing-framework.md  17-evaluation-framework.md  18-trace-format.md  19-debugging-model.md  20-ide-integration.md  21-examples.md  22-comparison-matrix.md  23-migration-paths.md  24-limitations.md  25-future-directions.md  26-self-evaluation.md
examples/: .env.example  README.md  approval.ulx  batch.ulx  brainstorm_names.md  custom_provider.ulx  eval_translate.ulx  explain_simply.md  generate_and_describe.ulx  multi_agent.ulx  pdf_qa.ulx  prompt_from_file.ulx  rag.ulx  reply_to_review.md  summarize.ulx  translate.ulx  ulexite.example.toml  voice_memo.ulx  write_haiku.md
examples/demos/: approval.tape  batch.tape  custom_provider.tape  eval_translate.tape  generate_and_describe.tape  multi_agent.tape  pdf_qa.tape  prompt_from_file.tape  rag.tape  summarize.tape  translate.tape  voice_memo.tape
examples/fixtures/: translations.jsonl
examples/kb/: chunks.jsonl
examples/prompts/: greet_system.txt  greet_user.txt
examples/snapshots/TranslateQuality/: translate_de-4fcd8bf1.json  translate_es-f2bd6372.json  translate_fr-62163e3f.json
examples/tickets/: backlog.jsonl
scripts/: install.ps1  install.sh  regen-demos.sh
tooling/vscode-ulx/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
tooling/vscode-ulx/src/: extension.ts
tooling/vscode-ulx/syntaxes/: ulx.tmLanguage.json
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: comparison.md  core-concepts.md  debugging.md  getting-started.md  intro.md  limitations.md  migration-guides.md  package-system.md  providers.md  roadmap.md  standard-library.md  testing-and-evaluation.md
website/docs/examples/: index.md
website/docs/language/: grammar-reference.md  syntax.md  type-system.md
website/docs/tooling/: cli-reference.md  editor-support.md
website/scripts/: copy-wllama-wasm.js  gen-crystal-mesh.mjs
website/src/: prism-ulexite.ts
website/src/components/CrystalCursor/: index.tsx  styles.module.css
website/src/components/CrystalMesh/: index.tsx  mesh.json  styles.module.css
website/src/components/MockConsole/: index.tsx  styles.module.css
website/src/components/Playground/: RunPanel.tsx  index.tsx  styles.module.css  wllama.ts
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx  playground.module.css  playground.tsx
website/src/theme/: prism-include-languages.ts
website/static/: CNAME
