[workspace]
resolver = "2"
members = [
    "crates/ulx-ast",
    "crates/ulx-syntax",
    "crates/ulx-sema",
    "crates/ulx-ir",
    "crates/ulx-runtime",
    "crates/ulx-cli",
    "crates/ulx-lsp",
    "crates/ulx-wasm",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JGalego/ulexite"

[workspace.dependencies]
ulx-ast = { path = "crates/ulx-ast" }
ulx-syntax = { path = "crates/ulx-syntax" }
ulx-sema = { path = "crates/ulx-sema" }
ulx-ir = { path = "crates/ulx-ir" }
ulx-runtime = { path = "crates/ulx-runtime" }
logos = "0.14"
chumsky = "0.9"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"

