[package]
name = "ulx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ulx"
path = "src/main.rs"

[dependencies]
ulx-ast = { workspace = true }
ulx-syntax = { workspace = true }
ulx-sema = { workspace = true }
ulx-ir = { workspace = true }
ulx-runtime = { workspace = true }
clap = { workspace = true }
ariadne = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenvy = "0.15.7"
