[package]
name = "ulx-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ulx-ast = { workspace = true }
ulx-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
ulx-syntax = { workspace = true }
ulx-sema = { workspace = true }
tempfile = "3"
