[package]
name = "ulx-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ulx-ast = { workspace = true }
ulx-syntax = { workspace = true }
ulx-sema = { workspace = true }
serde = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
